# BadgerPhysx

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  untitled.sublime-project  untitled.sublime-workspace
include/: CMakeLists.txt  Core.cpp  Core.h  ForceGenerator.cpp  ForceGenerator.h  LocusMathFunctions.h  Makefile  RigidBody.cpp  RigidBody.h  World.cpp  World.h  cmake_install.cmake
src/: main.cpp  main.sublime-workspace  main2.cpp  test.cpp  untitled.sublime-workspace
